k8s/services/stage/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: circleguard-ingress
  namespace: circleguard-stage
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api-stage.circleguard.edu
      secretName: circleguard-tls-stage
  rules:
    - host: api-stage.circleguard.edu
      http:
        paths:
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8180
          - path: /api/v1/gate
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8087
          - path: /api/v1/health-status
            pathType: Prefix
            backend:
              service:
                name: promotion-service
                port:
                  number: 8088
          - path: /api/v1/questionnaires
            pathType: Prefix
            backend:
              service:
                name: form-service
                port:
                  number: 8086
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 8083
